sample/msvc/error/c2090.cpp
// C2090.cpp
int func1(void)[] {}   // C2090
